<resources>
    <string name="app_name">e_store</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">E store</string>
    <string name="nav_header_subtitle">www.e_store.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="logout">Logout</string>
    <string name="price">$.%1$s</string>
    <string name="reset_password">Reset Password</string>
    <string name="e_empty_cart">Empty Cart</string>
    <string name="e_total_price">Total Price</string>
    <string name="e_pay_now">pay now</string>
    <string name="e_save_for_later">Save For Later</string>
    <string name="e_warning">Please click on save for later to save your cart if you do not want to make payment.</string>
    <string name="e_no_order">There is not any order!</string>
    <string name="e_old_password">Old Password</string>
    <string name="e_update_password">Update Password</string>
    <string name="e_new_password">New Password</string>
    <string name="e_confirm_password">Confirm Password</string>
    <string name="e_add_to_cart">Add To Cart</string>
    <string name="e_create_account">Create Account</string>
    <string name="e_to_log_in">Already have account? Log In</string>
    <string name="e_no_results">No Results</string>
    <string name="e_no_account">No account yet? Sign Up here</string>
    <string name="e_login">Login</string>
    <string name="e_order_number">Order Number :</string>
    <string name="e_price">Price :</string>
    <string name="e_order_date">Order Date :</string>
    <string name="e_place_an_order">Place an order and pay</string>
    <string name="e_payment_des">click on the button below and choose your payment method</string>
    <string name="e_an_address">Add an address</string>
    <string name="e_address_line_1">Address Line 1</string>
    <string name="e_address_line_2">Address Line 2 (Optional)</string>
    <string name="e_country">Country</string>
    <string name="e_state">State</string>
    <string name="e_city">City</string>
    <string name="e_phone_number">Phone Number</string>
    <string name="e_zip">ZIP</string>
    <string name="e_next">next</string>
    <string name="e_success">Payment Success</string>
    <string name="e_failed">Payment Failed</string>
</resources>
