<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shippingdetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.shippingdetails.ShippingDetailsFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_an_address"
        android:textSize="30sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/h_1" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

        android:id="@+id/layout_address1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_margin="10dp"
        android:hint="@string/e_address_line_1"
        app:errorEnabled="true"

        app:layout_constraintRight_toLeftOf="@id/v_3"
        app:layout_constraintLeft_toRightOf="@id/v_1"
        app:layout_constraintTop_toBottomOf="@id/title">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
              />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

        android:id="@+id/layout_address2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/e_address_line_2"
        app:errorEnabled="true"


        app:layout_constraintRight_toLeftOf="@id/v_3"
        app:layout_constraintLeft_toRightOf="@id/v_1"
        app:layout_constraintTop_toBottomOf="@id/layout_address1">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

        android:id="@+id/layout_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintWidth_percent="0.5"
        android:hint="@string/e_country"
        app:errorEnabled="true"

        android:layout_margin="10dp"
        app:layout_constraintLeft_toRightOf="@id/v_1"
        app:layout_constraintTop_toBottomOf="@id/layout_address2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

        android:id="@+id/layout_state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_margin="10dp"
        android:hint="@string/e_state"
        app:errorEnabled="true"

        app:layout_constraintRight_toLeftOf="@id/layout_city"
        app:layout_constraintLeft_toRightOf="@id/v_1"
        app:layout_constraintTop_toBottomOf="@id/layout_country">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

        android:id="@+id/layout_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_margin="10dp"
        android:hint="@string/e_city"
        app:errorEnabled="true"

        app:layout_constraintLeft_toRightOf="@id/layout_state"
        app:layout_constraintRight_toLeftOf="@id/v_3"
        app:layout_constraintTop_toBottomOf="@id/layout_country">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

        android:id="@+id/layout_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        app:layout_constraintWidth_percent="0.5"
        android:hint="@string/e_phone_number"
        app:errorEnabled="true"
        app:layout_constraintLeft_toRightOf="@id/v_1"
        app:layout_constraintTop_toBottomOf="@id/layout_state">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

        android:id="@+id/layout_zip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_margin="10dp"
        android:hint="@string/e_zip"
        app:errorEnabled="true"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintRight_toLeftOf="@id/v_3"

        app:layout_constraintTop_toBottomOf="@id/layout_city">
        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/zip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_shippingDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/e_next"

         android:textSize="20sp"
        app:layout_constraintHeight_percent="0.08"
        style="@style/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/v_3"
        app:layout_constraintLeft_toRightOf="@id/v_1"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92"/>
</androidx.constraintlayout.widget.ConstraintLayout>
