<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/layout_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"

        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        app:hintTextAppearance="@style/HintText"

        app:layout_constraintLeft_toRightOf="@id/guide_2"
        app:layout_constraintTop_toBottomOf="@id/guide_1">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"

            android:hint="@string/name"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"

        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        app:hintTextAppearance="@style/HintText"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toRightOf="@id/guide_2"
        app:layout_constraintTop_toBottomOf="@id/layout_name">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"

            android:hint="@string/email"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"

        app:layout_constraintLeft_toRightOf="@id/guide_2"
        app:errorEnabled="true"
        android:layout_marginTop="25dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/green"
        app:errorTextAppearance="@style/ErrorText"
        app:hintTextAppearance="@style/HintText"
        app:layout_constraintTop_toBottomOf="@id/layout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:maxLines="1"

            android:hint="@string/password"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton

        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintDimensionRatio="W, 2:10"
        android:textAllCaps="false"
        android:textSize="24sp"
        style="@style/button"

        android:layout_marginTop="25dp"
        android:text="@string/e_create_account"
        app:layout_constraintLeft_toRightOf="@id/guide_2"
        app:layout_constraintTop_toBottomOf="@id/layout_password"/>
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register"/>
    <TextView
        android:id="@+id/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_to_log_in"
        android:textSize="20sp"
        android:textColor="@color/blue"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10"/>
</androidx.constraintlayout.widget.ConstraintLayout>