<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/order_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/e_order_number"/>
        <TextView
            android:id="@+id/order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"

            android:textSize="20sp"

            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/order_num"/>
        <TextView
            android:id="@+id/totalprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_below="@id/order_num"
            android:layout_marginTop="15dp"
            android:text="@string/e_price"
            android:layout_marginStart="15dp"
            android:textSize="20sp"

             />
        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="20sp"

             android:layout_below="@id/order_num"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/totalprice"/>
        <TextView
            android:id="@+id/order_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_order_date"
            android:textSize="20sp"
            android:layout_below="@id/totalprice"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="15dp"

             />
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/order_date"
            android:layout_below="@id/price"
             />
        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/price"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/date"
             />


    </RelativeLayout>

</androidx.cardview.widget.CardView>
