<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordActivity">

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/update" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/update"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:text="@string/e_update_password"
        android:textAllCaps="false"
        android:textSize="24sp"

        app:layout_constraintDimensionRatio="W, 2:10"
        app:layout_constraintLeft_toRightOf="@id/guide_2"
        app:layout_constraintTop_toBottomOf="@id/layout_confirm_pass"
        app:layout_constraintWidth_percent="0.8" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_new_pass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        app:hintTextAppearance="@style/HintText"
        app:layout_constraintLeft_toRightOf="@id/guide_2"
        app:layout_constraintTop_toBottomOf="@id/layout_old_pass"
        app:layout_constraintWidth_percent="0.8"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/e_new_password"

            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_confirm_pass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"

        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        app:hintTextAppearance="@style/HintText"
        app:layout_constraintLeft_toRightOf="@id/guide_2"
        app:layout_constraintTop_toBottomOf="@id/layout_new_pass"
        app:layout_constraintWidth_percent="0.8"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/e_confirm_password"
            android:inputType="textPassword"

            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_old_pass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        app:hintTextAppearance="@style/HintText"
        app:layout_constraintLeft_toRightOf="@id/guide_2"
        app:layout_constraintTop_toBottomOf="@id/guide_1"
        app:layout_constraintWidth_percent="0.8"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/old_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/e_old_password"

            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>